[package]
name = "iiirs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
image = { version = "0.25.6", default-features = false, features = [
    "bmp",
    "ff",
    "gif",
    "ico",
    "jpeg",
    "exr",
    "png",
    "pnm",
    "qoi",
    "rayon",
    "tga",
    "tiff",
    "webp",
] }
nom = "8.0.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread"] }
