[package]
name = "iiirs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
base16ct = "0.2.0"
base64ct = { version = "1.8.0", features = ["alloc"] }
image = { version = "0.25.6", default-features = false, features = [
    "bmp",
    "ff",
    "gif",
    "ico",
    "jpeg",
    "exr",
    "png",
    "pnm",
    "qoi",
    "rayon",
    "tga",
    "tiff",
    "webp",
] }
nom = "8.0.0"
reqwest = "0.12.20"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["fs", "rt", "rt-multi-thread"] }
walkdir = "2.5.0"
